<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_white_top_radius">

        <TextView
            android:id="@+id/closeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/app_space_normal"
            android:text="@string/close"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_light_gray"
            app:layout_constraintTop_toBottomOf="@id/closeBtn" />

        <com.task.noteapp.components.MyTextInputView
            android:id="@+id/titleEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_space_normal"
            android:hint="@string/title_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line"
            tools:layout_height="48dp" />

        <com.task.noteapp.components.MyTextInputView
            android:id="@+id/descriptionEdt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_space_normal"
            android:hint="@string/description_hint"
            android:lineSpacingExtra="4dp"
            android:maxLines="2"
            android:text="@string/lorem_ipsum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleEdt"
            app:maxLines="2" />

        <com.task.noteapp.components.MyTextInputView
            android:id="@+id/imgUrlEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_space_normal"
            android:hint="@string/img_url_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionEdt"
            tools:text="@string/img_url_hint" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_space_normal"
            android:backgroundTint="@color/green"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/imgUrlEdit">

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
